# zotero_llm_metadata

./: .gitignore  LICENSE  README.md  __main__.py  config.py  file_extract.py  fill_tags.py  graph_builder.py  llm_client.py  pyproject.toml  requirements.txt  runners.py  zotero_api.py  zotero_db.py  zotero_process.py
skill/: .gitignore  SKILL.md  requirements.txt
skill/scripts/: cli.py  client.py  graph_query.py  operations.py  pdfannots_helper.py  synonyms.py
src/zotero_llm_metadata/: __init__.py  __main__.py  config.py  llm.py  runners.py  tags.py
src/zotero_llm_metadata/graph/: __init__.py  builder.py  visualize.py
src/zotero_llm_metadata/zotero/: __init__.py  db.py
zotero/: SKILL.md
zotero-mcp/: CHANGELOG.md  README.md  pyproject.toml
zotero-mcp/docs/: getting-started.md
zotero-mcp/src/zotero_mcp/: chroma_client.py  cli.py  client.py  graph_analyze.py  graph_builder.py  graph_cluster.py  graph_export.py  graph_search.py  local_db.py  semantic_search.py  server.py  setup_helper.py  updater.py
zotero-mcp/tests/: test_semantic_stats.py  test_server_advanced_search.py  test_server_create_note.py  test_server_notes_and_tags.py
zotero/scripts/: better_bibtex_client.py  graph_query.py
